--- a/public/index.html
+++ b/public/index.html
@@ -331,7 +331,7 @@
   
   <div class="container">
     <header class="header">
-      <h1 class="logo">Lore-Synth</h1>
+      <h1 class="logo">Lore-Synth AI</h1>
       <p class="subtitle">Your emotional companion</p>
     </header>
 
